<resources>
    <string name="app_name">MCommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email">Enter:YourEmail</string>
    <string name="pssword">Enter:Your Password</string>
    <string name="confirm_password">Enter:Confirm Password</string>
    <string name="go_to_login">Go To LogIn</string>
    <string name="signUp">Sign Up</string>
    <string name="go_to_signUp">Go To SignUp</string>
    <string name="logIn">LogIn</string>

    <string name="client_id">109697999853-r204auhj03ft0ba030qsnlhl16ofi673.apps.googleusercontent.com</string>
    <string name="client_id2">759985624702-0h8mtc96t27oiq54j3q8f1l0j566e327.apps.googleusercontent.com</string>
    <string name="default_web_client_id">637769902026-kn138mt6f8c080b95qr7k0gc214jsgu4.apps.googleusercontent.com</string>
    <string name="guest">Skip</string>


    <string name="discriptionProductDetails">Discription</string>
    <string name="reviewProductDetails">Review</string>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="_category">Category</string>
    <string name="_profile">Profile</string>
    <string name="brands">Brands</string>
    <string name="brand">Brands</string>


    <string name="country">Country</string>

    <string name="tv_size" />
    <string name="tv_sizeOption">Size</string>
    <string name="tv_colorOption">Color</string>
    <string name="btn_addToCard">Add To Card</string>

    <string name="orderNo">Order No</string>
    <string name="noOfItem">No Of Item</string>
    <string name="address">Address</string>
    <string name="paid">Paid</string>
    <string name="date">Date</string>
    <string name="order_no">Order No:</string>
    <string name="no_ofitem">No Of Item :</string>
    <string name="_adress">Address :</string>
    <string name="_paid">Paid :</string>
    <string name="_date">Date :</string>
    <string name="setting">Setting</string>
    <string name="order">Order</string>
    <string name="productInfo">Details</string>
    <string name="favoritaFradment">Favorite</string>
    <string name="searchFragment">Search</string>
    <string name="_order">Order</string>
    <string name="sub_total">Sub Total</string>
    <string name="shiping_fees">Shipping Fees</string>
    <string name="total">Total</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="oorder">Order</string>
    <string name="message_account">"If you have an account click here"</string>
    <string name="message_acount2">"If you don't have an account click here "</string>
</resources>



