<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.view.LogInFragment" >

    <EditText
        android:id="@+id/et_userNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="393dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:hint="@string/your_email"/>

    <EditText
        android:id="@+id/et_passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_userNameLogin"
        app:layout_constraintStart_toStartOf="@+id/et_userNameLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_userNameLogin"
        tools:ignore="SpeakableTextPresentCheck"
        android:hint="@string/pssword"/>

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/logIn"
        app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />

    <TextView
        android:id="@+id/tv_goToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/go_to_signUp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_logIn"
        app:layout_constraintStart_toEndOf="@+id/btn_logIn"
        app:layout_constraintTop_toTopOf="@+id/btn_logIn"
        />
    <TextView
        android:id="@+id/tv_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/guest"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>